cmake_minimum_required(VERSION 3.15)
project(TestNetwordC)

set(CMAKE_CXX_STANDARD 14)

add_executable(TestNetwordC main.cpp)
add_executable(point1 point1.cpp)
add_executable(point2 point2.cpp)
add_executable(point3 point3.cpp)
add_executable(point4 point4.cpp)
add_executable(point5 point5.cpp)
add_executable(malloc1 malloc1.cpp)

