cmake_minimum_required(VERSION 3.15)
project(TestNetwordC)

set(CMAKE_CXX_STANDARD 14)

add_executable(TestNetwordC main.c test.h test.c)
add_executable(point1 point1.cpp)
add_executable(point2 point2.cpp)
add_executable(point3 point3.cpp)
add_executable(point4 point4.cpp)
add_executable(point5 point5.cpp)
add_executable(malloc1 malloc1.cpp)
add_executable(enum1 enum1.cpp)
add_executable(enum2 enum2.cpp)
add_executable(struct1 struct1.cpp)
add_executable(struct2 struct2.cpp)
add_executable(define1 define1.cpp)
add_executable(define2 define2.cpp)
#add_executable(test test.h test.c)
add_executable(function1 function1.cpp)
add_executable(function2 function2.cpp)
add_executable(function3 function3.cpp)

